# Suchi

./: .gitignore  LICENSE  Makefile  README.md  setup.sh
.claude/: launch.json
.github/workflows/: ci.yml  pages.yml  release.yml
backend/: pyproject.toml  suchi-server.py  suchi-server.spec  suchi_server.py
backend/src/suchi/: __init__.py  api.py  cli.py  collections.py  config.py  deep_research.py  library.py  models.py  search.py
backend/src/suchi/citations/: processor.py
backend/src/suchi/connector/: __init__.py  server.py
backend/src/suchi/pageindex/: __init__.py  indexer.py  retriever.py
backend/src/suchi/routes/: annotations.py  chat.py  citations.py  collections.py  deep_research.py  discovery.py  entries.py  export.py  pdf_finder.py  references.py  search.py  settings.py  sync.py
backend/src/suchi/sync/: __init__.py  base.py  engine.py  gdrive.py  oauth.py
backend/src/suchi/translators/: __init__.py  arxiv.py  crossref.py  discovery.py  grobid.py  openalex.py  openlibrary.py  pdf_extract.py  pdf_finder.py  references.py  resolver.py  semantic_scholar.py  zotero_rdf.py
docs/: index.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/chat/: ChatBubble.tsx  ChatPanel.tsx
frontend/src/components/layout/: Sidebar.tsx  Toolbar.tsx
frontend/src/components/metadata/: MetadataPanel.tsx  ReferencePopup.tsx
frontend/src/components/reader/: PdfViewer.tsx
frontend/src/hooks/: useLibrary.ts  useTheme.ts
frontend/src/lib/: api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+1 files in other folders)
