[package]
name = "suchi"
version = "0.1.0"
description = "CLI-first reference manager with AI-powered research tools"
authors = ["Ayush Patnaik"]
edition = "2024"

[lib]
name = "suchi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
